# stis_la-cosmic

./: .gitignore  README.md  pyproject.toml
.agent/rules/: rules.md
src/stis_la_cosmic/: __init__.py  fits_reader.py  image.py  instrument.py
tests/: compare_spectrum.py  matplotlibrc  test.py
tests/HST/o56502010/: o56502010_asn.fits  o56502010_jif.fits  o56502010_jit.fits  o56502010_jwf.fits  o56502010_jwt.fits  o56502010_log.txt  o56502010_raw.fits  o56502010_spt.fits  o56502010_sx1.fits  o56502010_trl.fits  o56502010_wsp.fits
tests/HST/o56502020/: o56502020_asn.fits  o56502020_jif.fits  o56502020_jit.fits  o56502020_jwf.fits  o56502020_jwt.fits  o56502020_log.txt  o56502020_raw.fits  o56502020_spt.fits  o56502020_sx1.fits  o56502020_trl.fits  o56502020_wsp.fits
tests/HST/o56502030/: o56502030_asn.fits  o56502030_jif.fits  o56502030_jit.fits  o56502030_jwf.fits  o56502030_jwt.fits  o56502030_log.txt  o56502030_raw.fits  o56502030_spt.fits  o56502030_sx1.fits  o56502030_trl.fits  o56502030_wsp.fits
tests/HST/o56502040/: o56502040_asn.fits  o56502040_jif.fits  o56502040_jit.fits  o56502040_jwf.fits  o56502040_jwt.fits  o56502040_log.txt  o56502040_raw.fits  o56502040_spt.fits  o56502040_sx1.fits  o56502040_trl.fits  o56502040_wsp.fits
tests/HST/o56502050/: o56502050_asn.fits  o56502050_jif.fits  o56502050_jit.fits  o56502050_jwf.fits  o56502050_jwt.fits  o56502050_log.txt  o56502050_raw.fits  o56502050_spt.fits  o56502050_sx1.fits  o56502050_trl.fits  o56502050_wsp.fits
tests/HST/o56503010/: o56503010_asn.fits  o56503010_jif.fits  o56503010_jit.fits  (+8 more)
(+11 files in other folders)
